# telegraph

./: CHANGELOG.md  README.md  cabal.project  flake.nix  hie.yaml  telegraph.cabal
src/Control/Effect/: Telegraph.hs
src/Web/Telegraph/: API.hs  Types.hs  Utils.hs
test/: Spec.hs
