cabal-version:   3.0
name:            telegraph
version:         0.1.0

-- synopsis:
-- description:
-- category:
license:         BSD-3-Clause
license-file:    LICENSE
author:          Poscat
maintainer:      Poscat <poscat@mail.poscat.moe>
copyright:       Copyright (c) Poscat 2021
stability:       alpha
homepage:        https://github.com/poscat0x04/telegraph
bug-reports:     https://github.com/poscat0x04/telegraph/issues
extra-doc-files:
  CHANGELOG.md
  README.md

common common-attrs
  build-depends:
    , aeson
    , base                  >=4.10 && <5
    , bytestring
    , conduit
    , deriving-aeson
    , exceptions
    , generic-data-surgery
    , http-client
    , http-client-tls
    , http-conduit
    , monad-control
    , mtl
    , text
    , transformers-base

  default-language:   Haskell2010
  default-extensions:
    NoStarIsType
    BangPatterns
    ConstraintKinds
    DataKinds
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveTraversable
    DuplicateRecordFields
    EmptyCase
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    InstanceSigs
    KindSignatures
    LambdaCase
    MultiWayIf
    OverloadedStrings
    PartialTypeSignatures
    PatternSynonyms
    RecordWildCards
    ScopedTypeVariables
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    UnicodeSyntax
    ViewPatterns

library
  import:          common-attrs
  build-depends:
  exposed-modules:
    Web.Telegraph.API
    Web.Telegraph.Types

  other-modules:
  hs-source-dirs:  src

test-suite telegraph-test
  import:         common-attrs
  type:           exitcode-stdio-1.0
  build-depends:  telegraph
  hs-source-dirs: test
  main-is:        Spec.hs

source-repository head
  type:     git
  location: https://github.com/poscat0x04/telegraph
